2007-12-25  Ales Hakl  <ales at hakl dot net>

	* lib/gcollect.c: garbage collector statistics module

2007-12-24  Ales Hakl  <ales at hakl dot net>

	* lib/inet.c (dfsch_inet_xml_escape): special character escpaing
	for SGML/XML

	* src/parse.c (tokenizer_process): recognize CR as whitespace

	* lib/inet.c (dfsch_http_query_2_hash): use value, not name
	(dfsch_inet_urldecode): do not fill whole memory with spaces

2007-12-23  Ales Hakl  <ales at hakl dot net>

	* lib/inet.c: internet (HTTP) data handling module
	(dfsch_inet_url..code): urlencode and urldecode
	(urldecode_to_string): urldecode results from URI parsing
	(dfsch_inet_base64_encode): base64 encoder
	(dfsch_inet_base64_decode): base64 decoder

2007-12-22  Ales Hakl  <ales at hakl dot net>

	* src/native.c (native_for_each): fix empty list case

2007-12-18  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (main): do not load modules by default

2007-12-17  Ales Hakl  <ales at hakl dot net>

	* src/repl.c (interactive_repl): handle exceptions for parser on
	line-feeds

	* src/ports.c (native_write): write readable representation


2007-12-16  Ales Hakl  <ales at hakl dot net>

	* src/load.c (dfsch_load_so): return some meaningful value

2007-12-15  Ales Hakl  <ales at hakl dot net>

	* src/system.c (native_encode_universal_time):
	encode-universal-time	
	(native_iso_format_time): iso-format-time function

2007-12-14  Ales Hakl  <ales at hakl dot net>

	* src/system.c (native_decode_universal_time):
	decode-universal-time function
	(native_get_decoded_time): get-decoded-time

	* src/ports.c (file_port_type): partial implementation file-port
	(file_port_seek): seek! and tell

2007-12-13  Ales Hakl  <ales at hakl dot net>

	* src/parse.c (dfsch_parser_read_from_port): fixed read

	* src/ports.c (dfsch_port_write_buf): there is no reason for
	write-buf! to return anything
	(string_output_port_type): string-output-port
	(string_input_port_type): partial implementation of string-input-port